센서 조회 API에 페이지네이션 기능 추가
